# DataAgent-demo

./: CMakeLists.txt  db_test.py  main.cpp
Agent/: .env  app.py  db_client.py  llm.py  requirements.txt  schemas.py  tool_registry.py
Agent/tools/: image_tools.py  kv_tools.py
Server/: kv_api.cpp  kv_api.h  server.cpp  server.h  session.cpp  session.h
Storage/Data/: data_schema.txt
Storage/DataFormat/: catalog.cpp  catalog.h  index_base.h  index_btree.cpp  index_btree.h  index_hash.cpp  index_hash.h  row.cpp  row.h  table.cpp  table.h
Storage/System/: config.cpp  config.h  global.cpp  global.h  helper.cpp  helper.h  manager.cpp  manager.h  mem_alloc.cpp  mem_alloc.h  stats.cpp  stats.h  thread.cpp  thread.h  txn.cpp  txn.h
Storage/concurrency_control/: occ.cpp  occ.h  occ_row.cpp
Storage/test/: data.txt  data_schema.txt  test.h  test_txn.cpp  test_wl.cpp  wl.cpp  wl.h
